# ferris-chan

./: Cargo.toml  Makefile  README.md  config.toml
ferris-backend/: Cargo.toml
ferris-backend/src/: config.rs  constants.rs  database.rs  endpoints.rs  main.rs  transfer.rs
ferris-backend/src/database/: sqlite.rs
ferris-backend/src/endpoints/: admin.rs  post.rs  user.rs
ferris-backend/src/transfer/: admin.rs  home.rs  post.rs  user.rs
ferris-frontend/: Cargo.toml  README.md  index.html
ferris-frontend/public/: styles.scss  vars.scss
ferris-frontend/src/: api.rs  lib.rs  main.rs
ferris-frontend/src/components/: base64_img.rs  mod.rs  post.rs  send_post.rs  topbar.rs
ferris-frontend/src/pages/: board.rs  home.rs  login.rs  mod.rs  register.rs
ferris_shared/: Cargo.toml
ferris_shared/src/: transfer.rs
ferris_shared/src/transfer/: admin.rs  home.rs  post.rs  user.rs
test-scripts/: add-post-reply.sh  add-post.sh  get-child-post.sh  get-posts.sh  login-admin.sh  login-user.sh  register-user.sh
