[package]
name = "ferris-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v1", "v4"]}