[package]
name = "ferris-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = {  version = "0.4.40", features = ["alloc"] }
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
ferris_shared = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
toml = "0.8.20"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v1", "v4"]}
log = "0.4.27"
http = "0.2.12"
